--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-calendar-events": "^2.2.0",
+    "react-native-flash-message": "^0.4.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-paper": "^5.12.5",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
     "react-native-vector-icons": "^10.2.0"
